--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-vertical-timeline-component": "^3.5.3",
     "vercel": "^31.0.3",
     "web-vitals": "^2.1.4"
   },
